# api-service/docs/swagger.json
@@ -3,6 +3,8 @@
     "info": {
         "contact": {}
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/minio/deleteImage": {
             "delete": {
@@ -292,7 +294,7 @@
             }
         },
         "/scraper/getScrapedSale": {
-            "get": {
+            "post": {
                 "description": "Get sale from scraper by providing the url and platform params",
                 "consumes": [
                     "application/json"
@@ -311,6 +313,18 @@
                         "name": "TaskUser",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "URL sources for scraping",
+                        "name": "URLS",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SaleUrls"
+                            }
+                        }
                     }
                 ],
                 "responses": {
@@ -448,10 +462,15 @@
         "models.SaleUrls": {
             "type": "object",
             "properties": {
-                "Amazon": {
+                "IST": {
+                    "description": "\"https://www.instocktrades.com/products/jun247225/flash-by-mark-waid-omnibus-hc-vol-02\"",
                     "type": "string"
                 },
-                "IST": {
+                "amazon": {
+                    "description": "\"https://www.amazon.sg/Flash-Mark-Waid-Omnibus/dp/1779528418/\"",
+                    "type": "string"
+                },
+                "upc": {
                     "type": "string"
                 }
             }
@@ -512,5 +531,14 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        }
+    },
+    "externalDocs": {
+        "description": "OpenAPI",
+        "url": "https://swagger.io/resources/open-api/"
     }
 }
