# api-service/main.go
@@ -3,7 +3,38 @@ package main
 import (
 	"log"
 	"os"
+
+	"github.com/gin-gonic/gin"
+	swaggerfiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	docs "github.com/teomz/Price-Tracker/api-service/docs"
+	"github.com/teomz/Price-Tracker/api-service/minio"
+	"github.com/teomz/Price-Tracker/api-service/postgresql"
+	"github.com/teomz/Price-Tracker/api-service/scraper"
 )
+
+// @host      localhost:8080
+// @BasePath  /api/v1
+
+// @securityDefinitions.basic  BasicAuth
+
+// @externalDocs.description  OpenAPI
+// @externalDocs.url          https://swagger.io/resources/open-api/
+
+func initialization() *gin.Engine {
+	r := gin.Default()
+	r.MaxMultipartMemory = 10 << 20
+	docs.SwaggerInfo.BasePath = "/api/v1"
+	v1 := r.Group("/api/v1")
+	{
+		minio.Initialize(v1)
+		postgresql.Initialize(v1)
+		scraper.Initialize(v1)
+	}
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+
+	return r
+}
 
 func main() {
 
@@ -15,16 +46,4 @@ func main() {
 
 	log.Println("Server running on port", port)
 	r.Run(":" + port)
-
-	// Initialize the database connection
-	// fmt.Println("Initializing database...")
-
-	// Calling the initialize method from the database package
-	// err := database.Initialize()
-	// if err != nil {
-	// 	fmt.Println("Failed to create database instance: %v", err)
-	// }
-
-	// You can add more logic here if necessary after initialization
-
 }
